Restore original site with SEO updates

--- a/index.html
+++ b/index.html
@@ -3,7 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Zach Bonner</title>
+<meta name="description" content="Official website of Zach Bonner, philanthropist, software developer, and advocate for homeless youth.">
+<meta name="keywords" content="Zach Bonner, philanthropist, software developer, humanitarian, public speaker">
+<meta name="author" content="Zach Bonner">
+<link rel="canonical" href="https://zachbonner.com/">
+<meta property="og:title" content="Zach Bonner">
+<meta property="og:description" content="Official site of philanthropist and developer Zach Bonner.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://zachbonner.com/">
+<meta property="og:site_name" content="Zach Bonner">
+<title>Zach Bonner | Philanthropist, Developer, and Advocate</title>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Zach Bonner",
+  "url": "https://zachbonner.com",
+  "sameAs": [
+    "https://github.com/zach-bonner",
+    "https://en.wikipedia.org/wiki/Zach_Bonner",
+    "https://linkedin.com/in/zbonner"
+  ],
+  "description": "Philanthropist, software developer, and advocate for homeless youth."
+}
+</script>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
