--- a/index.html
+++ b/index.html
@@ -3,13 +3,40 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hello Rosemond!</title>
+  <title>Zach Bonner</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="message">
-    <h1>Hello Rosemond!</h1>
-  </div>
+
+  <header>
+    <h1>Zach Bonner</h1>
+    <p>Walking with Purpose</p>
+  </header>
+
+  <section class="about">
+    <h2>About Me</h2>
+    <p>I'm Zach Bonner — a philanthropist, advocate, software developer, and builder of a better future. My journey began as a child walking across America to raise awareness for homeless youth. Today, I continue to push forward with compassion, perseverance, and purpose — blending technology and service to create lasting impact.</p>
+  </section>
+
+  <section class="contact">
+    <h2>Connect with Me</h2>
+    <p>
+      <a href="https://github.com/zach-bonner" target="_blank">GitHub</a> | 
+      <a href="https://en.wikipedia.org/wiki/Zach_Bonner" target="_blank">Wikipedia</a> | 
+      <a href="https://linkedin.com/in/zbonner" target="_blank">LinkedIn</a>
+    </p>
+    <p>Or reach out via <a href="mailto:zachlbonner@icloud.com">email</a>.</p>
+  </section>
+
+  <section class="collaboration">
+    <h2>Collaborate or Book Me</h2>
+    <p>If you're interested in collaborating on a project or booking me for a speaking engagement, I'd love to connect. Please email me directly at <a href="mailto:zachlbonner@icloud.com">zachlbonner@icloud.com</a> with details.</p>
+  </section>
+
+  <footer>
+    &copy; 2025 Zach Bonner. All rights reserved.
+  </footer>
+
 </body>
 </html>
